# stream-etl-sink-pj

./: .gitignore  README.md  SECURITY.md  build-docs.sh  cleanup-flink.sh  mkdocs.yml  requirements.txt
.github/workflows/: docs.yml
airflow/: .gitignore  .gitleaksignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
airflow/dags/: example_dag.py  glue_job_dag.py
airflow/scripts/: create-ecr-repos.sh  create_glue_job.py  deploy-airflow.sh  deploy.sh  push-images-to-ecr.sh  setup_glue.sh  simple_glue_job.py
docs/: index.md
docs/getting-started/: architecture.md  prerequisites.md  quick-start.md
docs/operations/: troubleshooting.md
docs/security/: overview.md
kafka-connect/: Chart.yaml  NODEPORT-CONFIGURATION.md  README.md  values.yaml
kafka-connect/docs/: test-cdc.md
kafka-connect/templates/: configmap.yaml  deployment.yml  hpa.yaml  poddisruptionbudget.yaml  secret.yaml
kafka-ui/: values.yaml
postgres/: README.md  clear.sh  create-secrets.sh  deploy-postgres-cdc.sh  init-dummy-data.sql  postgres-cdc-deployment.yaml  test.sh
redpanda/: redpanda_s3.sh  setup.sh
secrets/: create-secrets.sh
